--- a/app/index.html
+++ b/app/index.html
@@ -2,6 +2,7 @@
 {% import "components/Header/_header.njk" as Header %}
 {% import "pages/landing-1/_hero.njk" as HeroSection %}
 {% import "pages/landing-1/_brand.njk" as BrandSection %}
+{% import "pages/landing-1/_about.njk" as AboutSection %}
 {% block main %}
   <!-- Header Section Start -->
   {{Header.render(siteHeader)}}
@@ -12,4 +13,7 @@
   <!-- Brand Section Start -->
   {{BrandSection.render()}}
   <!-- Brand Section End -->
+  <!-- About Section Start -->
+  {{AboutSection.render()}}
+  <!-- About Section End -->
 {% endblock %}
