--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,7 @@
 {% import "pages/landing-1/_hero.njk" as HeroSection %}
 {% import "pages/landing-1/_brand.njk" as BrandSection %}
 {% import "pages/landing-1/_about.njk" as AboutSection %}
+{% import "pages/landing-1/_skill.njk" as SkillSection %}
 {% block main %}
   <!-- Header Section Start -->
   {{Header.render(siteHeader)}}
@@ -15,5 +16,8 @@
   <!-- Brand Section End -->
   <!-- About Section Start -->
   {{AboutSection.render()}}
+  <!-- About Section End -->
+  <!-- About Section Start -->
+  {{SkillSection.render()}}
   <!-- About Section End -->
 {% endblock %}
