--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,7 @@
 {% import "pages/landing-1/_brand.njk" as BrandSection %}
 {% import "pages/landing-1/_about.njk" as AboutSection %}
 {% import "pages/landing-1/_skill.njk" as SkillSection %}
+{% import "pages/landing-1/_service.njk" as ServiceSection %}
 {% block main %}
   <!-- Header Section Start -->
   {{Header.render(siteHeader)}}
@@ -17,7 +18,10 @@
   <!-- About Section Start -->
   {{AboutSection.render()}}
   <!-- About Section End -->
-  <!-- About Section Start -->
+  <!-- Skill Section Start -->
   {{SkillSection.render()}}
-  <!-- About Section End -->
+  <!-- Skill Section End -->
+  <!-- Service Section Start -->
+  {{ServiceSection.render()}}
+  <!-- Service Section End -->
 {% endblock %}
