--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
 {% import "pages/landing-1/_service.njk" as ServiceSection %}
 {% import "pages/landing-1/_counter.njk" as CounterSection %}
 {% import "pages/landing-1/_qualification.njk" as QualificationSection %}
+{% import "pages/landing-1/_cta.njk" as CtaSection %}
 {% block main %}
   <!-- Header Section Start -->
   {{Header.render(siteHeader)}}
@@ -32,4 +33,7 @@
   <!-- Qualification Section Start -->
   {{QualificationSection.render()}}
   <!-- Qualification Section End -->
+  <!-- Cta Section Start -->
+  {{CtaSection.render()}}
+  <!-- Cta Section End -->
 {% endblock %}
