--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,7 @@
 {% import "pages/landing-1/_counter.njk" as CounterSection %}
 {% import "pages/landing-1/_qualification.njk" as QualificationSection %}
 {% import "pages/landing-1/_cta.njk" as CtaSection %}
+{% import "pages/landing-1/_portfolio.njk" as PortfolioSection %}
 {% block main %}
   <!-- Header Section Start -->
   {{Header.render(siteHeader)}}
@@ -36,4 +37,7 @@
   <!-- Cta Section Start -->
   {{CtaSection.render()}}
   <!-- Cta Section End -->
+  <!-- Portfolio Section Start -->
+  {{PortfolioSection.render()}}
+  <!-- Portfolio Section End -->
 {% endblock %}
