--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
 {% import "pages/landing-1/_qualification.njk" as QualificationSection %}
 {% import "pages/landing-1/_cta.njk" as CtaSection %}
 {% import "pages/landing-1/_portfolio.njk" as PortfolioSection %}
+{% import "pages/landing-1/_testimonial.njk" as TestimonialSection %}
 {% block main %}
   <!-- Header Section Start -->
   {{Header.render(siteHeader)}}
@@ -40,4 +41,7 @@
   <!-- Portfolio Section Start -->
   {{PortfolioSection.render()}}
   <!-- Portfolio Section End -->
+  <!-- Testimonial Section Start -->
+  {{TestimonialSection.render()}}
+  <!-- Testimonial Section End -->
 {% endblock %}
