about section complete

--- a/app/landing-2.html
+++ b/app/landing-2.html
@@ -1,9 +1,9 @@
 {% extends "template.njk" %}
 {% import "components/Header/_header.njk" as Header %}
 {% import "pages/landing-2/_hero.njk" as HeroSection %}
-{# {% import "pages/landing-1/_brand.njk" as BrandSection %}
-{% import "pages/landing-1/_about.njk" as AboutSection %}
-{% import "pages/landing-1/_skill.njk" as SkillSection %}
+{% import "pages/landing-2/_brand.njk" as BrandSection %}
+{% import "pages/landing-2/_about.njk" as AboutSection %}
+{# {% import "pages/landing-1/_skill.njk" as SkillSection %}
 {% import "pages/landing-1/_service.njk" as ServiceSection %}
 {% import "pages/landing-1/_counter.njk" as CounterSection %}
 {% import "pages/landing-1/_qualification.njk" as QualificationSection %}
@@ -19,13 +19,13 @@
   <!-- Hero Section Start -->
   {{HeroSection.render()}}
   <!-- Hero Section End -->
-  {# <!-- Brand Section Start -->
+ <!-- Brand Section Start -->
   {{BrandSection.render()}}
   <!-- Brand Section End -->
-  <!-- About Section Start -->
+ <!-- About Section Start -->
   {{AboutSection.render()}}
   <!-- About Section End -->
-  <!-- Skill Section Start -->
+   {#  <!-- Skill Section Start -->
   {{SkillSection.render()}}
   <!-- Skill Section End -->
   <!-- Service Section Start -->
