skill section complete

--- a/app/landing-2.html
+++ b/app/landing-2.html
@@ -4,8 +4,8 @@
 {% import "pages/landing-2/_brand.njk" as BrandSection %}
 {% import "pages/landing-2/_about.njk" as AboutSection %}
 {% import "pages/landing-2/_counter.njk" as CounterSection %}
-{# {% import "pages/landing-1/_skill.njk" as SkillSection %}
-{% import "pages/landing-1/_service.njk" as ServiceSection %}
+{% import "pages/landing-2/_skill.njk" as SkillSection %}
+{# {% import "pages/landing-1/_service.njk" as ServiceSection %}
 {% import "pages/landing-1/_qualification.njk" as QualificationSection %}
 {% import "pages/landing-1/_cta.njk" as CtaSection %}
 {% import "pages/landing-1/_portfolio.njk" as PortfolioSection %}
@@ -19,19 +19,19 @@
   <!-- Hero Section Start -->
   {{HeroSection.render()}}
   <!-- Hero Section End -->
- <!-- Brand Section Start -->
+  <!-- Brand Section Start -->
   {{BrandSection.render()}}
   <!-- Brand Section End -->
- <!-- About Section Start -->
+  <!-- About Section Start -->
   {{AboutSection.render()}}
   <!-- About Section End -->
   <!-- Counter Section Start -->
   {{CounterSection.render()}}
   <!-- Counter Section End -->
-   {#  <!-- Skill Section Start -->
+  <!-- Skill Section Start -->
   {{SkillSection.render()}}
   <!-- Skill Section End -->
-  <!-- Service Section Start -->
+   {#    <!-- Service Section Start -->
   {{ServiceSection.render()}}
   <!-- Service Section End -->
   <!-- Qualification Section Start -->
