--- a/app/landing-2.html
+++ b/app/landing-2.html
@@ -5,8 +5,8 @@
 {% import "pages/landing-2/_about.njk" as AboutSection %}
 {% import "pages/landing-2/_counter.njk" as CounterSection %}
 {% import "pages/landing-2/_skill.njk" as SkillSection %}
-{# {% import "pages/landing-1/_service.njk" as ServiceSection %}
-{% import "pages/landing-1/_qualification.njk" as QualificationSection %}
+{% import "pages/landing-2/_service.njk" as ServiceSection %}
+{# {% import "pages/landing-1/_qualification.njk" as QualificationSection %}
 {% import "pages/landing-1/_cta.njk" as CtaSection %}
 {% import "pages/landing-1/_portfolio.njk" as PortfolioSection %}
 {% import "pages/landing-1/_testimonial.njk" as TestimonialSection %}
@@ -31,10 +31,10 @@
   <!-- Skill Section Start -->
   {{SkillSection.render()}}
   <!-- Skill Section End -->
-   {#    <!-- Service Section Start -->
+  <!-- Service Section Start -->
   {{ServiceSection.render()}}
   <!-- Service Section End -->
-  <!-- Qualification Section Start -->
+   {#    <!-- Qualification Section Start -->
   {{QualificationSection.render()}}
   <!-- Qualification Section End -->
   <!-- Cta Section Start -->
