--- a/app/landing-2.html
+++ b/app/landing-2.html
@@ -8,6 +8,7 @@
 {% import "pages/landing-2/_service.njk" as ServiceSection %}
 {% import "pages/landing-2/_cta.njk" as CtaSection %}
 {% import "pages/landing-2/_portfolio.njk" as PortfolioSection %}
+{% import "pages/landing-2/_feature.njk" as FeatureSection %}
 {# {% import "pages/landing-1/_qualification.njk" as QualificationSection %}
 {% import "pages/landing-1/_testimonial.njk" as TestimonialSection %}
 {% import "pages/landing-1/_blog.njk" as BlogSection %}
@@ -40,6 +41,9 @@
   <!-- Portfolio Section Start -->
   {{PortfolioSection.render()}}
   <!-- Portfolio Section End -->
+  <!-- FeatureSection Section Start -->
+  {{FeatureSection.render()}}
+  <!-- FeatureSection Section End -->
    {#    <!-- Qualification Section Start -->
   {{QualificationSection.render()}}
   <!-- Qualification Section End -->
