about section 03 complete

--- a/app/landing-3.html
+++ b/app/landing-3.html
@@ -6,8 +6,8 @@
 {% import "pages/landing-3/_content-01.njk" as ContentSectionOne %}
 {% import "pages/landing-3/_content-02.njk" as ContentSectionTwo %}
 {% import "pages/landing-3/_content-03.njk" as ContentSectionThree %}
-{#{% import "pages/landing-3/_about.njk" as AboutSection %}
-{% import "pages/landing-3/_skill.njk" as SkillSection %}
+{% import "pages/landing-3/_about.njk" as AboutSection %}
+{#{% import "pages/landing-3/_skill.njk" as SkillSection %}
 {% import "pages/landing-3/_service.njk" as ServiceSection %}
 {% import "pages/landing-3/_cta.njk" as CtaSection %}
 {% import "pages/landing-3/_portfolio.njk" as PortfolioSection %}
@@ -36,10 +36,10 @@
   <!-- Content Section Three Section Start -->
   {{ContentSectionThree.render()}}
   <!-- Content Section Three Section End -->
-  {#   <!-- About Section Start -->
+  <!-- About Section Start -->
   {{AboutSection.render()}}
   <!-- About Section End -->
-  <!-- Counter Section Start -->
+   {#  <!-- Counter Section Start -->
   {{CounterSection.render()}}
   <!-- Counter Section End -->
   <!-- Skill Section Start -->
