--- a/app/landing-3.html
+++ b/app/landing-3.html
@@ -8,6 +8,7 @@
 {% import "pages/landing-3/_content-03.njk" as ContentSectionThree %}
 {% import "pages/landing-3/_about.njk" as AboutSection %}
 {% import "pages/landing-3/_testimonial.njk" as TestimonialSection %}
+{% import "pages/landing-3/_software-integrations.njk" as SoftwareintegrationsSection %}
 {#{% import "pages/landing-3/_skill.njk" as SkillSection %}
 {% import "pages/landing-3/_service.njk" as ServiceSection %}
 {% import "pages/landing-3/_cta.njk" as CtaSection %}
@@ -42,6 +43,9 @@
   <!-- Testimonial Section Start -->
   {{TestimonialSection.render()}}
   <!-- Testimonial Section End -->
+  <!-- Softwareintegrations Section Start -->
+  {{SoftwareintegrationsSection.render()}}
+  <!-- Softwareintegrations Section End -->
    {#  <!-- Counter Section Start -->
   {{CounterSection.render()}}
   <!-- Counter Section End -->
