footer section complete

--- a/app/landing-3.html
+++ b/app/landing-3.html
@@ -13,8 +13,8 @@
 {% import "pages/landing-3/_service.njk" as ServiceSection %}
 {% import "pages/landing-3/_cta.njk" as CtaSection %}
 {% import "pages/landing-3/_portfolio.njk" as PortfolioSection %}
- {% import "pages/landing-3/_faq.njk" as FaqSection %}
-{% import "pages/landing-3/_footer.njk" as FooterSection %} #}
+ {% import "pages/landing-3/_faq.njk" as FaqSection %} #}
+{% import "pages/landing-3/_footer.njk" as FooterSection %}
 {% block main %}
   <!-- Header Section Start -->
   {{Header.render(siteHeaderTwo)}}
@@ -63,8 +63,8 @@
   <!-- Portfolio Section End -->
   <!-- Faq Section Start -->
   {{FaqSection.render()}}
-  <!-- Faq Section End -->
+  <!-- Faq Section End --> #}
   <!-- Footer Section Start -->
   {{FooterSection.render()}}
-  <!-- Footer Section End -->  #}
+  <!-- Footer Section End --> 
 {% endblock %}
