--- a/app/landing-2.html
+++ b/app/landing-2.html
@@ -11,7 +11,7 @@
 {% import "pages/landing-2/_feature.njk" as FeatureSection %}
 {% import "pages/landing-2/_testimonial.njk" as TestimonialSection %}
  {% import "pages/landing-2/_faq.njk" as FaqSection %}
-{% import "pages/landing-2/_footer.njk" as FooterSection %}
+{% import "components/Footer/_footer-02.njk" as FooterSection %}
 {% block main %}
   <!-- Header Section Start -->
   {{Header.render(siteHeaderTwo)}}
