--- a/app/landing-3.html
+++ b/app/landing-3.html
@@ -10,7 +10,7 @@
 {% import "pages/landing-3/_testimonial.njk" as TestimonialSection %}
 {% import "pages/landing-3/_software-integrations.njk" as SoftwareintegrationsSection %}
 {% import "pages/landing-3/_cta.njk" as CtaSection %}
-{% import "pages/landing-3/_footer.njk" as FooterSection %}
+{% import "components/Footer/_footer-03.njk" as FooterSection %}
 {% block main %}
   <!-- Header Section Start -->
   {{Header.render(siteHeaderTwo)}}
