--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@
 {% import "pages/landing-1/_portfolio.njk" as PortfolioSection %}
 {% import "pages/landing-1/_testimonial.njk" as TestimonialSection %}
 {% import "pages/landing-1/_blog.njk" as BlogSection %}
-{% import "pages/landing-1/_footer.njk" as FooterSection %}
+{% import "components/Footer/_footer-01.njk" as FooterSection %}
 {% block main %}
   <!-- Header Section Start -->
   {{Header.render(siteHeaderOne)}}
