landing 4 setup and header and footer section complete

--- a/app/landing-3.html
+++ b/app/landing-3.html
@@ -13,7 +13,7 @@
 {% import "components/Footer/_footer-03.njk" as FooterSection %}
 {% block main %}
   <!-- Header Section Start -->
-  {{Header.render(siteHeaderTwo)}}
+  {{Header.render(siteHeaderThree)}}
   <!-- Header Section End -->
   <!-- Hero Section Start -->
   {{HeroSection.render()}}
