brand section complete

--- a/app/landing-4.html
+++ b/app/landing-4.html
@@ -1,8 +1,8 @@
 {% extends "template.njk" %}
 {% import "components/Header/_header.njk" as Header %}
 {% import "pages/landing-4/_hero.njk" as HeroSection %}
-{# {% import "pages/landing-4/_brand.njk" as BrandSection %}
-{% import "pages/landing-4/_feature.njk" as FeatureSection %}
+{% import "pages/landing-4/_brand.njk" as BrandSection %}
+{# {% import "pages/landing-4/_feature.njk" as FeatureSection %}
 {% import "pages/landing-4/_content-01.njk" as ContentSectionOne %}
 {% import "pages/landing-4/_content-02.njk" as ContentSectionTwo %}
 {% import "pages/landing-4/_content-03.njk" as ContentSectionThree %}
@@ -18,10 +18,10 @@
   <!-- Hero Section Start -->
   {{HeroSection.render()}}
   <!-- Hero Section End -->
-  {# <!-- Brand Section Start -->
+<!-- Brand Section Start -->
   {{BrandSection.render()}}
   <!-- Brand Section End -->
-  <!-- FeatureSection Section Start -->
+  {#   <!-- FeatureSection Section Start -->
   {{FeatureSection.render()}}
   <!-- FeatureSection Section End -->
   <!-- Content Section One Section Start -->
