landing 4 price complete

--- a/app/landing-4.html
+++ b/app/landing-4.html
@@ -3,6 +3,7 @@
 {% import "pages/landing-4/_hero.njk" as HeroSection %}
 {% import "pages/landing-4/_brand.njk" as BrandSection %}
 {% import "pages/landing-4/_service.njk" as ServiceSection %}
+{% import "pages/landing-4/_price.njk" as PriceSection %}
 {# {% import "pages/landing-4/_feature.njk" as FeatureSection %}
 {% import "pages/landing-4/_content-01.njk" as ContentSectionOne %}
 {% import "pages/landing-4/_content-02.njk" as ContentSectionTwo %}
@@ -25,6 +26,9 @@
   <!-- Service Section Start -->
   {{ServiceSection.render()}}
   <!-- Service Section End -->
+    <!-- Price Section Start -->
+  {{PriceSection.render()}}
+  <!-- Price Section End -->
   {#   <!-- FeatureSection Section Start -->
   {{FeatureSection.render()}}
   <!-- FeatureSection Section End -->
