content 01 section complete

--- a/app/landing-4.html
+++ b/app/landing-4.html
@@ -4,6 +4,7 @@
 {% import "pages/landing-4/_brand.njk" as BrandSection %}
 {% import "pages/landing-4/_service.njk" as ServiceSection %}
 {% import "pages/landing-4/_content-01.njk" as ContentOneSection %}
+{% import "pages/landing-4/_content-02.njk" as ContentTwoSection %}
 {% import "pages/landing-4/_team.njk" as TeamSection %}
 {% import "pages/landing-4/_testimonial.njk" as TestimonialSection %}
 {% import "pages/landing-4/_price.njk" as PriceSection %}
@@ -25,6 +26,9 @@
   <!-- Content One Section Start -->
   {{ContentOneSection.render()}}
   <!-- Content One Section End -->
+  <!-- Content Two Section Start -->
+  {{ContentTwoSection.render()}}
+  <!-- Content Two Section End -->
   <!-- Team Section Start -->
   {{TeamSection.render()}}
   <!-- Team Section End -->
