about and counter seceton complte

--- a/app/landing-4.html
+++ b/app/landing-4.html
@@ -3,6 +3,8 @@
 {% import "pages/landing-4/_hero.njk" as HeroSection %}
 {% import "pages/landing-4/_brand.njk" as BrandSection %}
 {% import "pages/landing-4/_service.njk" as ServiceSection %}
+{% import "pages/landing-4/_about.njk" as AboutSection %}
+{% import "pages/landing-4/_counter.njk" as CounterSection %}
 {% import "pages/landing-4/_content-01.njk" as ContentOneSection %}
 {% import "pages/landing-4/_content-02.njk" as ContentTwoSection %}
 {% import "pages/landing-4/_team.njk" as TeamSection %}
@@ -23,6 +25,12 @@
   <!-- Service Section Start -->
   {{ServiceSection.render()}}
   <!-- Service Section End -->
+  <!-- About Section Start -->
+  {{AboutSection.render()}}
+  <!-- About Section End -->
+  <!-- Counter One Section Start -->
+  {{CounterSection.render()}}
+  <!-- Counter One Section End -->
   <!-- Content One Section Start -->
   {{ContentOneSection.render()}}
   <!-- Content One Section End -->
