--- a/app/landing-5.html
+++ b/app/landing-5.html
@@ -1,6 +1,7 @@
 {% extends "template.njk" %}
 {% import "components/Header/_header.njk" as Header %}
 {% import "pages/landing-5/_hero.njk" as HeroSection %}
+{% import "pages/landing-5/_feature.njk" as FeatureSection %}
 {# {% import "pages/landing-5/_brand.njk" as BrandSection %}
 {% import "pages/landing-5/_service.njk" as ServiceSection %}
 {% import "pages/landing-5/_about.njk" as AboutSection %}
@@ -19,6 +20,9 @@
   <!-- Hero Section Start -->
   {{HeroSection.render()}}
   <!-- Hero Section End -->
+  <!-- Feature Section Start -->
+  {{FeatureSection.render()}}
+  <!-- Feature Section End -->
   {# <!-- Brand Section Start -->
   {{BrandSection.render()}}
   <!-- Brand Section End -->
