complete content-01 section

--- a/app/landing-5.html
+++ b/app/landing-5.html
@@ -3,10 +3,10 @@
 {% import "pages/landing-5/_hero.njk" as HeroSection %}
 {% import "pages/landing-5/_feature.njk" as FeatureSection %}
 {% import "pages/landing-5/_about.njk" as AboutSection %}
+{% import "pages/landing-5/_content-01.njk" as ContentSectionOne %}
 {# {% import "pages/landing-5/_brand.njk" as BrandSection %}
 {% import "pages/landing-5/_service.njk" as ServiceSection %}
 {% import "pages/landing-5/_counter.njk" as CounterSection %}
-{% import "pages/landing-5/_content-01.njk" as ContentOneSection %}
 {% import "pages/landing-5/_content-02.njk" as ContentTwoSection %}
 {% import "pages/landing-5/_team.njk" as TeamSection %}
 {% import "pages/landing-5/_testimonial.njk" as TestimonialSection %}
@@ -26,15 +26,15 @@
   <!-- About Section Start -->
   {{AboutSection.render()}}
   <!-- About Section End -->
+  <!-- Counter One Section Start -->
+  {{ContentSectionOne.render()}}
+  <!-- Counter One Section End -->
   {# <!-- Brand Section Start -->
   {{BrandSection.render()}}
   <!-- Brand Section End -->
   <!-- Service Section Start -->
   {{ServiceSection.render()}}
   <!-- Service Section End -->
-  <!-- Counter One Section Start -->
-  {{CounterSection.render()}}
-  <!-- Counter One Section End -->
   <!-- Content One Section Start -->
   {{ContentOneSection.render()}}
   <!-- Content One Section End -->
