--- a/app/landing-4.html
+++ b/app/landing-4.html
@@ -7,8 +7,9 @@
 {% import "pages/landing-4/_counter.njk" as CounterSection %}
 {% import "pages/landing-4/_content-01.njk" as ContentOneSection %}
 {% import "pages/landing-4/_content-02.njk" as ContentTwoSection %}
+{% import "pages/landing-4/_testimonial-01.njk" as TestimonialSectionOne %}
 {% import "pages/landing-4/_team.njk" as TeamSection %}
-{% import "pages/landing-4/_testimonial.njk" as TestimonialSection %}
+{% import "pages/landing-4/_testimonial-02.njk" as TestimonialSectionTwo %}
 {% import "pages/landing-4/_price.njk" as PriceSection %}
 {% import "pages/landing-4/_blog.njk" as BlogSection %}
 {% import "components/Footer/_footer-02.njk" as FooterSection %}
@@ -37,12 +38,15 @@
   <!-- Content Two Section Start -->
   {{ContentTwoSection.render()}}
   <!-- Content Two Section End -->
+  <!-- Testimonial One Section Start -->
+  {{TestimonialSectionOne.render()}}
+  <!-- Testimonial One Section End -->
   <!-- Team Section Start -->
   {{TeamSection.render()}}
   <!-- Team Section End -->
-  <!-- Testimonial Section Start -->
-  {{TestimonialSection.render()}}
-  <!-- Testimonial Section End -->
+  <!-- Testimonial Tow Section Start -->
+  {{TestimonialSectionTwo.render()}}
+  <!-- Testimonial Tow Section End -->
       <!-- Price Section Start -->
   {{PriceSection.render()}}
   <!-- Price Section End -->
