--- a/app/landing-6.html
+++ b/app/landing-6.html
@@ -2,6 +2,7 @@
 {% import "components/Header/_header.njk" as Header %}
 {% import "pages/landing-6/_hero.njk" as HeroSection %}
 {% import "pages/landing-6/_feature.njk" as FeatureSection %}
+{% import "pages/landing-6/_content-01.njk" as ContentSection %}
 {% import "components/Footer/_footer-03.njk" as FooterSection %} 
 {% block main %}
   <!-- Header Section Start -->
@@ -13,6 +14,9 @@
  <!-- Feature Section Start -->
   {{FeatureSection.render()}}
   <!-- Feature Section End -->
+  <!-- Content Section Start -->
+  {{ContentSection.render()}}
+  <!-- Content Section End -->
   {#  <!-- About Section Start -->
   {{AboutSection.render()}}
   <!-- About Section End -->
