--- a/app/landing-6.html
+++ b/app/landing-6.html
@@ -2,10 +2,12 @@
 {% import "components/Header/_header.njk" as Header %}
 {% import "pages/landing-6/_hero.njk" as HeroSection %}
 {% import "pages/landing-6/_feature.njk" as FeatureSection %}
-{% import "pages/landing-6/_content-01.njk" as ContentSection %}
+{% import "pages/landing-6/_content-01.njk" as ContentSectionOne %}
 {% import "pages/landing-6/_about.njk" as AboutSection %}
 {% import "pages/landing-6/_counter.njk" as CounterSection %}
 {% import "pages/landing-6/_screenshot.njk" as ScreenshotSection %}
+{% import "pages/landing-6/_content-02.njk" as ContentSectionTwo %}
+{% import "pages/landing-6/_content-03.njk" as ContentSectionThree %}
 {% import "components/Footer/_footer-03.njk" as FooterSection %} 
 {% block main %}
   <!-- Header Section Start -->
@@ -17,9 +19,9 @@
  <!-- Feature Section Start -->
   {{FeatureSection.render()}}
   <!-- Feature Section End -->
-  <!-- Content Section Start -->
-  {{ContentSection.render()}}
-  <!-- Content Section End -->
+  <!-- Content Section One Start -->
+  {{ContentSectionOne.render()}}
+  <!-- Content Section One End -->
   <!-- About Section Start -->
   {{AboutSection.render()}}
   <!-- About Section End -->
@@ -29,22 +31,13 @@
   <!-- Screenshot Section Start -->
   {{ScreenshotSection.render()}}
   <!-- Screenshot Section End -->
-  {#  <!-- Content One Section Start -->
-  {{ContentSectionOne.render()}}
-  <!-- Content One Section End -->
-  <!-- Content Two Section Start -->
+    <!-- Counter Section Two Start -->
   {{ContentSectionTwo.render()}}
-  <!-- Content Two Section End -->
-  <!-- Faq Two Section Start -->
-  {{FaqSection.render()}}
-  <!-- Faq Two Section End -->
-  <!-- Price Section Start -->
-  {{PriceSection.render()}}
-  <!-- Price Section End -->
-  <!-- Testimonial Section Start -->
-  {{TestimonialSection.render()}}
-  <!-- Testimonial Section End -->
-  <!-- Footer Section Start --> #}
+  <!-- Counter Section Two End -->
+    <!-- Counter Section Three Start -->
+  {{ContentSectionThree.render()}}
+  <!-- Counter Section Three End -->
+  <!-- Footer Section Start -->
   {{FooterSection.render()}}
   <!-- Footer Section End -->
 {% endblock %}
