--- a/app/landing-6.html
+++ b/app/landing-6.html
@@ -9,6 +9,7 @@
 {% import "pages/landing-6/_content-02.njk" as ContentSectionTwo %}
 {% import "pages/landing-6/_content-03.njk" as ContentSectionThree %}
 {% import "pages/landing-6/_cta.njk" as CtaSection %}
+{% import "pages/landing-6/_testimonial.njk" as TestimonialSection %}
 {% import "components/Footer/_footer-03.njk" as FooterSection %} 
 {% block main %}
   <!-- Header Section Start -->
@@ -41,6 +42,9 @@
     <!-- Cta Section Three Start -->
   {{CtaSection.render()}}
   <!-- Cta Section Three End -->
+  <!-- Testimonial Section Three Start -->
+  {{TestimonialSection.render()}}
+  <!-- Testimonial Section Three End -->
   <!-- Footer Section Start -->
   {{FooterSection.render()}}
   <!-- Footer Section End -->
