inner header fix

--- a/app/support.html
+++ b/app/support.html
@@ -4,7 +4,7 @@
 {% import "components/Footer/_footer-03__v2.njk" as FooterSection %}
 {% block main %}
   <!-- Header Section Start -->
-  {{Header.render(siteHeaderThree)}}
+  {{Header.render(innerHeader)}}
   <!-- Header Section End -->
   <!-- Footer Section Start -->
   {{FooterSection.render()}}
